--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <title>OpenLayers Example</title>
+        <title>Karttapaikka client</title>
         <link rel="stylesheet" href="css/style.css" type="text/css">
-        <link rel="stylesheet" href="css/lol.css" type="text/css">
+        <link rel="stylesheet" href="css/basic_style.css" type="text/css">
     </head>
     <body>
         <div id="map"></div>
