--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id="map"></div>
+        <script src="lib/jquery.mobile-1.1.0.min.js"></script>
         <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
         <script src="lib/OpenLayers.js"></script>
         <script src="js/map.js"></script>
