--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="map"></div>
         <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
-        <script src="lib/OpenLayers.js"></script>
+        <script src="lib/OpenLayers/OpenLayers.js"></script>
         <script src="js/map.js"></script>
     </body>
 </html>
