--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
         <div id="map"></div>
         <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
+        <script src="lib/jquery-1.7.2.min.js"></script>
+        <script src="lib/jquery_cookie.js"></script>
+        <script src="lib/jquery_jsoncookie.js"></script>
         <script src="lib/OpenLayers/OpenLayers.js"></script>
         <script src="js/map.js"></script>
     </body>
