--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         <script src="lib/jquery_jsoncookie.js"></script>
         <script src="lib/OpenLayers/OpenLayers.js"></script>
         <script src="js/map.js"></script>
+        <script src="js/lolnas.js"></script>
+        <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
     </body>
 </html>
