--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="lib/jquery-1.7.2.min.js"></script>
         <script src="lib/jquery_cookie.js"></script>
         <script src="lib/jquery_jsoncookie.js"></script>
-        <script src="lib/OpenLayers/OpenLayers.js"></script>
+        <script src="lib/OpenLayers/OpenLayers.mobile.js"></script>
         <script src="js/map.js"></script>
         <script src="js/lolnas.js"></script>
         <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
