--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <title>Karttapaikka client</title>
-        <link rel="stylesheet" href="css/style.css" type="text/css">
-    </head>
-    <body>
-        <div id="map"></div>
-        <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
-        <script src="lib/jquery-1.7.2.min.js"></script>
-        <script src="lib/jquery_cookie.js"></script>
-        <script src="lib/jquery_jsoncookie.js"></script>
-        <script src="lib/OpenLayers/OpenLayers.mobile.js"></script>
-        <script src="js/map.js"></script>
-        <script src="js/lolnas.js"></script>
-        <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
-    </body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Karttapaikka client</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+  </head>
+  <body>
+    <div id="map"></div>
+
+    <div id="buttons">
+      <a href="#" id="locate">Paikanna</a>
+      <a href="#" id="lolnasLayer">Lounastiedot</a>
+    </div>
+
+    <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
+    <script src="lib/jquery-1.7.2.min.js"></script>
+    <script src="lib/jquery_cookie.js"></script>
+    <script src="lib/jquery_jsoncookie.js"></script>
+    <script src="lib/OpenLayers/OpenLayers.mobile.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/lolnas.js"></script>
+    <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
+    <script src="js/jq_listeners.js">
+    </script>
+  </body>
 </html>
