--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     <script src="lib/jquery_cookie.js"></script>
     <script src="lib/jquery_jsoncookie.js"></script>
     <script src="lib/OpenLayers/OpenLayers.mobile.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/lolnas.js"></script>
+    <script src="js/application.js"></script>
     <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
-    <script src="js/jq_listeners.js">
-    </script>
   </body>
 </html>
