--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       </div>
 
       <div id="buttons" data-role="controlgroup" data-type="horizontal">
-        <a href="#" data-icon="locate" data-role="button" id="locate">Paikanna</a>
         <select name="mapSelect" id="mapSelect" data-native-menu="false">
           <option data-placeholder="true">Valitse kartta</option>
           <option value="mapQuest">Peruskartta (MapQuest)</option>
@@ -40,11 +39,15 @@
         <button id="lolnasLayer">Lounaat</button>
       </div>
 
-      <div id="navigation" data-role="controlgroup" data-type="vertical">
-        <a href="#" data-role="button" data-icon="plus" id="plus"
-           data-iconpos="notext"></a>
-        <a href="#" data-role="button" data-icon="minus" id="minus"
-           data-iconpos="notext"></a>
+      <div id="navigation">
+        <div data-role="controlgroup" data-type="vertical">
+          <a href="#" data-role="button" data-icon="plus" id="plus"
+            data-iconpos="notext"></a>
+          <a href="#" data-role="button" data-icon="minus" id="minus"
+            data-iconpos="notext"></a>
+        </div>
+        <a href="#" data-icon="locate" data-role="button" id="locate"
+          data-iconpos="notext"></a>
       </div>
 
     </div>
