lounaat-nappi oikeaan yläkulmaan

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       </div>
 
       <div data-role="controlgroup" data-type="horizontal" id="buttons">
+
+        <input type="checkbox" name="checkbox-1" id="lolnasLayer" />
+		    <label for="lolnasLayer">Lounaat</label>
+
         <select name="mapSelect" id="mapSelect" data-native-menu="false">
           <option data-placeholder="true">Valitse kartta</option>
           <option value="mapQuest">Peruskartta (MapQuest)</option>
@@ -37,7 +41,6 @@
           <option value="bingHybrid">Ilmakuvat (Bing)</option>
         </select>
 
-        <a href="#" id="lolnasLayer" data-role="button">Lounaat</a>
       </div>
 
       <div id="navigation">
