--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <script src="https://maps.google.com/maps/api/js?v=3.2&amp;sensor=false" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="lib/js/jquery.mobile-1.1.0/jquery.mobile-1.1.0.min.css" type="text/css">
+    <link rel="stylesheet" href="lib/js/jquery.mobile-120630/jquery.mobile.min.css" type="text/css">
     <script src="lib/js/jquery-1.7.2.min.js"></script>
-    <script src="lib/js/jquery.mobile-1.1.0/jquery.mobile-1.1.0.js"></script>
+    <script src="lib/js/jquery.mobile-120630/jquery.mobile.min.js"></script>
 
     <script src="lib/js/jquery_cookie.js"></script>
     <script src="lib/js/jquery_jsoncookie.js"></script>
@@ -54,7 +54,13 @@
           data-iconpos="notext"></a>
       </div>
 
+      <div id="transitionExample" data-role="popup" data-transition="flip">
+<!--        <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>-->
+	      <p></p>
+      </div>
+
     </div>
+
 
     <script src="js/application.js"></script>
     <script type="text/javascript" src="http://www.lolnas.fi/api/restaurants.json?callback=window.loadRestaurants"></script>
