--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           <a href="#" data-role="button" data-icon="minus" id="minus"
             data-iconpos="notext"></a>
         </div>
-        <a href="#" data-icon="locate" data-role="button" id="locate"
-          data-iconpos="notext"></a>
+        <div data-role="controlgroup">
+          <a href="#" data-icon="locate" data-role="button" id="locate"
+            data-iconpos="notext"></a>
+        </div>
       </div>
 
       <div id="transitionExample" data-role="popup" data-transition="flip">
