--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <option value="bingHybrid">Ilmakuvat (Bing)</option>
         </select>
 
+        <a href="#" data-icon="locate" data-role="button" id="locate"
+          data-iconpos="notext"></a>
+
       </div>
 
       <div id="navigation">
@@ -50,13 +53,9 @@
           <a href="#" data-role="button" data-icon="minus" id="minus"
             data-iconpos="notext"></a>
         </div>
-        <div data-role="controlgroup">
-          <a href="#" data-icon="locate" data-role="button" id="locate"
-            data-iconpos="notext"></a>
-        </div>
       </div>
 
-      <div id="transitionExample" data-role="popup" data-transition="flip">
+      <div id="popUpContainer" data-role="popup" data-transition="flip">
 <!--        <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>-->
 	      <p></p>
       </div>
