--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div id="popUpContainer" data-role="popup" data-transition="flip">
-<!--        <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>-->
+        <a href="#" data-rel="back" data-role="button" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 	      <p></p>
       </div>
 
