--- a/index.html
+++ b/index.html
@@ -42,16 +42,24 @@
 
       </div>
 
+      <div id="pan">
+        <div data-role="controlgroup" data-type="vertical">
+          <a href="#" data-role="button" data-icon="arrow-u" id="up" data-iconpos="notext" data-inline="true"></a>
+          <div id="leftright" data-role="controlgroup" data-type="horizontal">
+            <a href="#" data-role="button" data-icon="arrow-l" id="left" data-iconpos="notext" data-inline="true"></a>
+            <a href="#" data-role="button" data-icon="arrow-r" id="right" data-iconpos="notext" data-inline="true"></a>
+          </div>
+          <a href="#" data-role="button" data-icon="arrow-d" id="down" data-iconpos="notext" data-inline="true"></a>
+        </div>
+      </div>
+
       <div id="navigation">
         <div data-role="controlgroup" data-type="vertical">
-          <a href="#" data-role="button" data-icon="plus" id="plus"
-            data-iconpos="notext"></a>
-          <a href="#" data-role="button" data-icon="minus" id="minus"
-            data-iconpos="notext"></a>
+          <a href="#" data-role="button" data-icon="plus" id="plus" data-iconpos="notext"></a>
+          <a href="#" data-role="button" data-icon="minus" id="minus" data-iconpos="notext"></a>
         </div>
         <div data-role="controlgroup">
-          <a href="#" data-icon="locate" data-role="button" id="locate"
-            data-iconpos="notext"></a>
+          <a href="#" data-icon="locate" data-role="button" id="locate" data-iconpos="notext"></a>
         </div>
       </div>
 
